# insightmesh-core

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  agent-expansion-list-00.json  mkdocs.yml  pyproject.toml  spec-reference.md  specs-01.json
.claude/: settings.json
.claude/agents/: editor.md  historian.md  synthesis.md
.claude/skills/reconcile/: SKILL.md
.claude/skills/spec-gaps/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/tools/: _hook_regen_registry.py  analyze_class_usage.py  generate_class_registry.py  validate_class_conflicts.py
.github/workflows/: docs.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: getting-started.md  index.md  known-limitations.md
docs/how-to/: long-conversations.md  troubleshooting.md
docs/reference/: cli.md
specs/001-chat-to-wiki-batch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chat-to-wiki-batch/checklists/: agent-pipeline.md  requirements.md
specs/002-pre-flight-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pre-flight-validation/checklists/: echomine-integration.md  requirements.md
specs/002-pre-flight-validation/contracts/: cli-commands.md
specs/003-attachment-text-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-attachment-text-capture/checklists/: attachment-text.md  requirements.md
specs/003-attachment-text-capture/contracts/: attachment-rendering.md
specs/004-checkpointed-synthesis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-checkpointed-synthesis/checklists/: requirements.md  state-lifecycle.md
specs/004-checkpointed-synthesis/contracts/: checkpoint-orchestrator.md
specs/005-page-provenance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-page-provenance/checklists/: durability-and-resilience.md  requirements.md
specs/005-page-provenance/contracts/: history-orchestrator.md
specs/archive/: 000-original-vision-cognitive-knowledge-engine.md
specs/spikes/: content-type-and-multimodal-handling.md
src/: checkpoint.py  cli.py  exports.py  history.py  logger.py  orchestrator.py  transcript.py  wiki.py
tests/: test_checkpoint.py  test_cli.py  test_exports.py  test_fr023_compliance.py  test_history.py  test_logger.py  test_orchestrator.py  test_transcript.py  test_wiki.py
tests/fixtures/: chatgpt_export.json  claude_ai_export.json  long_chat_export.json  malformed.json  multi_topic.json  provenance_cp_001.json  revisit.json  single_topic.json
